[gd_scene load_steps=3 format=3 uid="uid://c0krlpbiun1ic"]

[ext_resource type="PackedScene" uid="uid://cq0bbpieyhdug" path="res://Core/UI/BasicSubWindow.tscn" id="1_g1tow"]
[ext_resource type="Script" path="res://Core/UI/SettingsWindow_Window.gd" id="2_v2kbv"]

[node name="SettingsWindow_Window" instance=ExtResource("1_g1tow")]
script = ExtResource("2_v2kbv")
label_text = "Window Settings"

[node name="WindowTitle" parent="WindowTitlePanel" index="0"]
text = "Window Settings"

[node name="GridContainer" type="GridContainer" parent="." index="2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 2
columns = 2

[node name="Label3" type="Label" parent="GridContainer" index="0"]
layout_mode = 2
text = "Transparent background"

[node name="CheckBox_TransparentBackground" type="CheckBox" parent="GridContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label6" type="Label" parent="GridContainer" index="2"]
layout_mode = 2
text = "Background color"

[node name="ColorPickerButton_BackgroundColor" type="ColorPickerButton" parent="GridContainer" index="3"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="toggled" from="GridContainer/CheckBox_TransparentBackground" to="." method="_any_value_changed"]
[connection signal="color_changed" from="GridContainer/ColorPickerButton_BackgroundColor" to="." method="_any_value_changed"]
